<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_text_view">login</string>
    <string name="pass_text_view">password</string>
    <string name="radio_button">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="what_switch">What does this do?</string>
    <string name="login_button">Login</string>
    <string name="default_email">default email</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Confirm Action</string>
    <string name="dialog_ok">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="response_message">Here\'s my response</string>
    <string name="ChatButtonText">Start Chat</string>
    <string name="SendButtonText">Send</string>
    <string name="default_hint">Enter Text</string>
    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <string name="ToolBarButtonText">Start Toolbar</string>
    <string name="OptionOne">Option 1</string>
    <string name="OptionTwo">Option 2</string>
    <string name="OptionThree">Option 3</string>
    <string name="OptionFour">About</string>
    <string name="FloatButtonMsg">Floating Button Clicked</string>
    <string name="Option1Msg">You selected item 1</string>
    <string name="WeatherButtonText">Open Weather Forecast</string>
    <string-array name="cities">
        <item>-- Select an Option --</item>
        <item>Ottawa</item>
        <item>Mississauga</item>
        <item>Toronto</item>
        <item>Waterloo</item>
        <item>Guelph</item>
        <item>Vancouver</item>
        <item>Fredericton</item>
    </string-array>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>