<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_one"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:orderInCategory="1"
        android:title="@string/OptionOne"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_two"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:orderInCategory="2"
        android:title="@string/OptionTwo"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_three"
        android:icon="@drawable/ic_baseline_cloud_done_24"
        android:orderInCategory="3"
        android:title="@string/OptionThree"
        app:showAsAction="always" />

    <item
        android:id="@+id/option_four"
        android:icon="@drawable/ic_baseline_cloud_done_24"
        android:orderInCategory="3"
        android:title="@string/OptionFour"
        app:showAsAction="never" />

</menu>