<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/hello_message"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="122dp"
        android:layout_height="78dp"
        android:background="#673AB7"
        android:onClick="startActivityForResult"
        android:text="@string/ButtonText"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="122dp"
        android:layout_height="78dp"
        android:background="#673AB7"
        android:onClick="startChat"
        android:text="@string/ChatButtonText"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/toolbar_button"
        android:layout_width="122dp"
        android:layout_height="78dp"
        android:background="#673AB7"
        android:onClick="startToolbar"
        android:text="@string/ToolBarButtonText"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/weather_button"
        android:layout_width="122dp"
        android:layout_height="78dp"
        android:background="#673AB7"
        android:onClick="startWeather"
        android:text="@string/WeatherButtonText"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button"
        app:layout_constraintVertical_bias="0.177" />

</androidx.constraintlayout.widget.ConstraintLayout>